--- a/loos.dox
+++ b/loos.dox
@@ -29,7 +29,13 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 <hr>
 
 \section Citing
-If you use LOOS in your work, please reference the following publication:
+If you use LOOS in your work, please reference the following
+publication:
+
+Romo, T.D., Grossfield, A. "LOOS: An extensible platform for the
+structural analysis of simulations."  31st Annual International
+Conference of the IEEE EMBS (2009): 2332-2335
+
 \verbatim
 @InProceedings{loos2009,
   author = 	 {T. D. Romo and A. Grossfield},
