Added a LOOSError class from which all other LOOS exceptions should derive.  Currently, we have ParseError and NullResult exceptions.  The former is for generic parsing problems while the latter is for any operation that would return a null set result (such as selectAtoms()).  I'll gradually migrate LOOS to using these exceptions for anything specific to LOOS.  On the other hand, I envision that garbage in should still most likely generate a stdexcept exception, such as range_error or logic_error...
svn path=/software/LOOS/trunk/; revision=2861

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2009-10-09    <tromo@spade.biophysics.rochester.edu>
+
+	* Added AtomicGroup::splitByName() which returns a std::map
+	mapping unique atom names to an AtomicGroup containing only those
+	atoms (by Alan)
+
+	* Added support for a LOOS family of exceptions in exception.hpp.
+	LOOS will gradually migrate to using LOOSError derived exceptions
+	for errors that are specific to LOOS...
+
 2009-10-06    <tromo@spade.biophysics.rochester.edu>
 
 	* Fixed a bug where segname was not properly handled as a synonym
