--- a/loos.dox
+++ b/loos.dox
@@ -799,6 +799,12 @@ periodicity (eg rdf).
 
 /*! \page Changes Change Log
 \section release152 Version 1.5.2 (10-9-2009)
+\subsection r151_added_changed
+<UL>
+  <LI> Changed AtomicGroup::principalAxes() so that it scales the
+  eigenvalues by the number of atoms.
+</UL>
+
 \subsection r151_bugs Bug Fixes
 <UL>
   <LI> Fixed bug where segname was not correctly handled as a synonym
@@ -807,6 +813,10 @@ periodicity (eg rdf).
   a special trajectory with one frame, but the readFrame() iterator
   was not correctly set so the first call would return a false,
   indicating that all frames had been read.
+  <LI> Fixed another issue with Amber restart files that may have
+  slight variations in formatting.  This affected restart files that
+  only have the number of atoms in the header rather than the number
+  of atoms and the time.
 </UL>
 
 \section release151 Version 1.5.1 (9-21-2009)
