--- a/INSTALL
+++ b/INSTALL
@@ -3,7 +3,7 @@ Building and Installing Loos
 
 *** FOR THE IMPATIENT ***
 
-= Fedora Core =
+= Fedora =
 
    scons release=1
    sudo scons release=1 install
@@ -25,6 +25,17 @@ custom.py and edit it.  Change the LAPACK and ATLAS variables to
 the following:
     LAPACK='/usr/lib/sse2/atlas'
     ATLAS='/usr/lib/sse2'
+
+= MACOS X (10.4+) =
+
+First, make sure you have the Developer's Tools (i.e. XCode)
+installed.  You can find it on your MacOS X install disk or,
+alternatively, you can sign up for a free account with the Apple
+Developer's Connection and download the latest version.  Next, you
+will need to install SCons and BOOST.  If all went well, you should be
+able to cd to where you have the LOOS source and run "scons release=1".
+
+
 
 
 *** FOR THE LESS IMPATIENT ***
@@ -69,5 +80,10 @@ version-specific directory, and then set up a symlink from
 
 = MAC OS X =
 
-Follow the instructions for LINUX above, but omit ATLAS.  You will, at
-a minimum, need the developer's tools installed along with BOOST.
+If LOOS does not build after following the "quick" instructions above
+for MacOS, check to see if the boost libraries are named based on your
+compiler and boost version, i.e. libboost_regex-gcc43.a rather than
+libboost_regex.a.  If this is the case, copy the custom.py,
+   cp custom.py-proto custom.py
+and then edit it to change the BOOSTREGEX and BOOSTPO variables to
+point to the correct library name.
