--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2009-11-05    <tromo@spade.biophysics.rochester.edu>
+
+	* Changed (MAJOR) the output of the ENM tools...  The ANM and GNM
+	tools both used an SVD to calculate the pseudoinverse of the
+	kirchoff/hessian matrix.  Originally, what was written out were
+	the components of the SVD (i.e. LSV, singular values, and RSV).
+	Generally, we're interested in only the eigenvectors and
+	eigenvalues of the hessian, not the full SVD.  So now, only the
+	LSV (i.e. the eigenvectors) are written out, and the singular
+	values are squared so they are actually the corresponding
+	eigenvalues...
+
 2009-11-04    <tromo@spade.biophysics.rochester.edu>
 
 	* Changed exposure so that it can now operate over a range of frames
